<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulbasico"
    tools:context="co.fresa.pat.PatFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="612dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/avatarName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/pressstart2pregular"
                android:paddingTop="40dp"
                android:text="placeholder"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:typeface="normal" />

            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/layer1basesprite3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginLeft="47dp"
                android:layout_marginTop="40dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginRight="25dp"
                    android:layout_row="0"
                    android:fontFamily="@font/bungeeregular"
                    android:paddingBottom="10dp"
                    android:paddingTop="50dp"
                    android:text="@string/skin_color"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/imageButtonSkin"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="68dp"
                    android:layout_height="66dp"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/layer1basesprite1" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:fontFamily="@font/bungeeregular"
                    android:text="@string/shirt"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/imageButtonShirt"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/layer1basesprite1" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:fontFamily="@font/bungeeregular"
                    android:paddingBottom="10dp"
                    android:paddingTop="25dp"
                    android:text="@string/pants"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/imageButtonPants"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/layer1basesprite1" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:fontFamily="@font/bungeeregular"
                    android:text="@string/hair"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/imageButtonHair"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/layer1basesprite1" />

                <ImageView
                    android:id="@+id/imageCoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="end"
                    android:layout_row="4"
                    android:paddingRight="15dp"
                    android:paddingTop="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/coin" />

                <TextView
                    android:id="@+id/textViewCoins"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:fontFamily="@font/bungeeregular"
                    android:paddingTop="55dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="36sp" />

            </GridLayout>

            <ImageButton
                android:id="@+id/logOutButton"
                android:layout_width="88dp"
                android:layout_height="56dp"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="80dp"
                android:adjustViewBounds="false"
                android:background="@color/blueScale2"
                android:src="@drawable/ic_action_exit"
                android:tint="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</FrameLayout>
